; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_fs/extr_stats.c_read_revisions.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_fs/extr_stats.c_read_revisions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i64, i64, i32 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_7__*, i32*, i32*)* @read_revisions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_revisions(%struct.TYPE_7__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32* @svn_pool_create(i32* %9)
  store i32* %10, i32** %7, align 8
  store i64 0, i64* %8, align 8
  br label %11

11:                                               ; preds = %40, %3
  %12 = load i64, i64* %8, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp slt i64 %12, %15
  br i1 %16, label %17, label %46

17:                                               ; preds = %11
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @svn_pool_clear(i32* %18)
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 8
  %23 = call i64 @svn_fs_fs__use_log_addressing(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %17
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %27 = load i64, i64* %8, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @read_log_pack_file(%struct.TYPE_7__* %26, i64 %27, i32* %28, i32* %29)
  %31 = call i32 @SVN_ERR(i32 %30)
  br label %39

32:                                               ; preds = %17
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %34 = load i64, i64* %8, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = call i32 @read_phys_pack_file(%struct.TYPE_7__* %33, i64 %34, i32* %35, i32* %36)
  %38 = call i32 @SVN_ERR(i32 %37)
  br label %39

39:                                               ; preds = %32, %25
  br label %40

40:                                               ; preds = %39
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = load i64, i64* %8, align 8
  %45 = add nsw i64 %44, %43
  store i64 %45, i64* %8, align 8
  br label %11

46:                                               ; preds = %11
  br label %47

47:                                               ; preds = %76, %46
  %48 = load i64, i64* %8, align 8
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 2
  %51 = load i64, i64* %50, align 8
  %52 = icmp sle i64 %48, %51
  br i1 %52, label %53, label %79

53:                                               ; preds = %47
  %54 = load i32*, i32** %7, align 8
  %55 = call i32 @svn_pool_clear(i32* %54)
  %56 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 3
  %58 = load i32, i32* %57, align 8
  %59 = call i64 @svn_fs_fs__use_log_addressing(i32 %58)
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %68

61:                                               ; preds = %53
  %62 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %63 = load i64, i64* %8, align 8
  %64 = load i32*, i32** %5, align 8
  %65 = load i32*, i32** %7, align 8
  %66 = call i32 @read_log_revision_file(%struct.TYPE_7__* %62, i64 %63, i32* %64, i32* %65)
  %67 = call i32 @SVN_ERR(i32 %66)
  br label %75

68:                                               ; preds = %53
  %69 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %70 = load i64, i64* %8, align 8
  %71 = load i32*, i32** %5, align 8
  %72 = load i32*, i32** %7, align 8
  %73 = call i32 @read_phys_revision_file(%struct.TYPE_7__* %69, i64 %70, i32* %71, i32* %72)
  %74 = call i32 @SVN_ERR(i32 %73)
  br label %75

75:                                               ; preds = %68, %61
  br label %76

76:                                               ; preds = %75
  %77 = load i64, i64* %8, align 8
  %78 = add nsw i64 %77, 1
  store i64 %78, i64* %8, align 8
  br label %47

79:                                               ; preds = %47
  %80 = load i32*, i32** %7, align 8
  %81 = call i32 @svn_pool_destroy(i32* %80)
  %82 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %82
}

declare dso_local i32* @svn_pool_create(i32*) #1

declare dso_local i32 @svn_pool_clear(i32*) #1

declare dso_local i64 @svn_fs_fs__use_log_addressing(i32) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @read_log_pack_file(%struct.TYPE_7__*, i64, i32*, i32*) #1

declare dso_local i32 @read_phys_pack_file(%struct.TYPE_7__*, i64, i32*, i32*) #1

declare dso_local i32 @read_log_revision_file(%struct.TYPE_7__*, i64, i32*, i32*) #1

declare dso_local i32 @read_phys_revision_file(%struct.TYPE_7__*, i64, i32*, i32*) #1

declare dso_local i32 @svn_pool_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
